Fix spacing

--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -35,6 +35,7 @@
 
   li {
     flex-basis: 50%;
+    margin: 0;
 
     @media (--medium-up) {
       flex-basis: auto;
